# cookbook

app/: .env.development  .eslintrc.json  package.json  tsconfig.json
app/src/app/: layout.tsx  page.tsx
app/src/app/[recipeId]/: page.tsx
server/: alembic.ini  docker-compose.yml  main.py  pyproject.toml
server/migrations/: env.py
server/migrations/versions/: 57b2e3f43516_create_user_table.py  6d7a8e47b8e2_create_recipe_table.py
server/src/authentication/: models.py
server/src/database/: __init__.py
server/src/recipe/: handlers.py  models.py  schemas.py
